# kuramoto-neurons

./: .gitignore  LICENSE  README.md
.github/workflows/: rust.yml
igor-pro/: N20T2E10M0D2.ipf  Proc0.ipf
kuramoto-rust/: Cargo.toml
kuramoto-rust/src/: main.rs  onedimensional.rs  twodimensional.rs  utils.rs
python/: plotting.py
