[package]
name = "kuramoto_rust"
version = "0.1.0"
edition = "2021"
authors = ["Liam Timms"]
description = "Kuramoto model with learning and delay in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version = "0.15.6", features = ["rayon"]}
ndarray-rand = "0.14.0"
ndarray-npy = "0.8.1"
ndarray-linalg = "0.14.0"
ndarray-stats = "0.5.0"
rayon = "1.5.3"
indicatif = "0.17.0"
clap = {version = "3.2.16" , features = ["derive"]}
